compiler/tests/fixtures/negative/error_semantic1.sol
function start() -> int {
    let x: int = 5;
    return undefined_var;
}
